[package]
name = "vault"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "vault"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]


[dependencies]
anchor-lang = "0.31.0"
anchor-spl = "0.31.0"
borsh = "1.5.7"
transfer-hook = { path = "../../../transfer-hook/programs/transfer-hook" }

[dev-dependencies]
litesvm = "0.6.1"
litesvm-token = "0.6.1"

solana-instruction = "2.2.1"
solana-keypair = "2.2.1"
solana-pubkey = "2.2.1"
solana-signer = "2.2.1"
solana-system-interface = "1.0.0"
solana-transaction = "2.2.1"
solana-message = "2.2.1"
solana-sdk-ids = "2.2.1"
solana-rpc-client = "3.0.3"
solana-address = "1.0.0"
solana-account = "2.2.1"
